--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "html2canvas": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-file-picker": "^0.0.6",
     "react-hot-toast": "^2.4.1",
+    "react-qr-code": "^2.0.12",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
